1.profile section icons added 2. profile image section overflow over modal corrected

--- a/src/pages/product/productlistingpage/components/productcard/productcard.css
+++ b/src/pages/product/productlistingpage/components/productcard/productcard.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 .card{
-    height: 28rem; 
+    height: 30rem; 
     width: 250px; 
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    padding-left: 2rem;
+    padding-left: 1.5rem;
     padding-right: 1rem;
        background-color: var(--bg-color-yellow);
 
@@ -68,9 +68,13 @@ img{
     flex-direction: column;
     align-items: start;
 }
+
+.description span{
+    font-weight: bold;
+}
+
 .stars span,.description p{
     font-size: .85em;
-    color: rgb(36,36,36);
 }
 .price{
     font-size:1.3em;
@@ -83,13 +87,15 @@ img{
     font-size: 0.7em;
 }
 .name{
-    text-shadow: 1px 1px 3px var(--primary-yellow);
+    text-shadow: 1px 1px 1px var(--primary-black);
     width:100%;
-    font-size:1.3em;
+    font-size:1.1rem;
     display: flex;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    flex-wrap: wrap;
+    text-align: left;
+    /* overflow: hidden; */
+    /* text-overflow: ellipsis; */
+    /* white-space: nowrap; */
     color:black;
     padding-bottom: .3rem;
 }
@@ -99,7 +105,6 @@ img{
 }
 .button-container{    
     width: 100%;
-    height: 40px;
     display: flex;
     align-items: center;
     margin: .7rem 0 ;
